--- a/example/mobile/css/main.css
+++ b/example/mobile/css/main.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 html,body{margin:0px; padding:0px;}
-body{left:10px; font-family:Arial, Helvetica, sans-serif; color:#FFF;}
+body{left:10px; font-family:Arial, Helvetica, sans-serif; color:#FFF; overflow:hidden;}
 .red{background-color: #64b1ff; border:1px #000 solid; overflow:hidden;}
 .grass{background:url(../images/grass.png) 0 0 no-repeat;}
 .target{background:url(../images/target.png) 0 0 no-repeat;}
